ready except eliminating junk

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,5 +1,5 @@
 {
-  "About": "Sobre mascotas perdidas",
+  "About": "Sobre Mascotas Perdidas",
   "Policy": "Policy",
   "Mission": "Misión",
   "Product": "Product",
